--- a/index.html
+++ b/index.html
@@ -3,50 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Roblox Login Replica</title>
+  <title>Roblox Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body, html {
       margin: 0;
       height: 100%;
       font-family: 'Arial', sans-serif;
-      background-color: #000;
+      background: url("Roblox+Background.jpg") no-repeat center center fixed;
+      background-size: cover;
       overflow: hidden;
     }
 
-    .background-grid {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: 10px;
-      padding: 20px;
-      box-sizing: border-box;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .background-tile {
-      width: 100%;
-      height: 100%;
-      border-radius: 1rem;
-      overflow: hidden;
-      filter: brightness(0.65);
-      transform-style: preserve-3d;
-      backface-visibility: hidden;
-    }
-
-    .background-tile img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-
-    /* Roblox logo style from image */
+    /* Roblox logo style */
     .logo {
       color: #fff;
       font-weight: 900;
@@ -61,14 +30,12 @@
       z-index: 10;
     }
 
-    /* The stylized tilted square "O" */
     .logo .tilted-square {
       width: 1.2em;
       height: 1.2em;
       background: white;
       transform: rotate(-20deg);
       margin-bottom: 0.25rem;    
-      clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
       position: relative;
       flex-shrink: 0;
       border-radius: 0.1em;
@@ -80,7 +47,7 @@
       width: 100%;
       max-width: 400px;
       backdrop-filter: blur(8px);
-      background: rgba(255 255 255 / 0.15);
+      background: rgba(0 0 0 / 0.55);
       border-radius: 1rem;
       padding: 2rem 2.5rem 2.5rem;
       box-sizing: border-box;
@@ -109,7 +76,7 @@
       background: rgba(255 255 255 / 0.2);
     }
 
-    /* Eye icon inside password */
+    /* Password eye toggle */
     .password-wrapper {
       position: relative;
       display: flex;
@@ -133,7 +100,7 @@
       color: white;
     }
 
-    /* Buttons styling */
+    /* Buttons */
     .btn-login {
       width: 100%;
       background: rgba(255 255 255 / 0.15);
@@ -169,7 +136,7 @@
       color: #000;
     }
 
-    /* Forgot password text */
+    /* Forgot password */
     .forgot-password {
       font-size: 0.85rem;
       text-align: center;
@@ -183,7 +150,7 @@
       text-decoration: underline;
     }
 
-    /* Responsive tweaks */
+    /* Responsive */
     @media (max-width: 480px) {
       .form-container {
         max-width: 95vw;
@@ -195,31 +162,9 @@
         font-size: 2.8rem;
       }
     }
-
   </style>
 </head>
 <body>
-  <div class="background-grid" aria-label="Background images with Roblox gameplay scenes">
-    <div class="background-tile" style="grid-column: 1 / 2; grid-row: 1 / 2;">
-      <img src="https://i.imgur.com/sXY49U8.png" alt="Roblox gameplay collage" onerror="this.style.display='none'" />
-    </div>
-    <div class="background-tile" style="grid-column: 2 / 3; grid-row: 1 / 2;">
-      <img src="https://i.imgur.com/sXY49U8.png" alt="Roblox gameplay collage" onerror="this.style.display='none'" />
-    </div>
-    <div class="background-tile" style="grid-column: 1 / 2; grid-row: 2 / 3;">
-      <img src="https://i.imgur.com/sXY49U8.png" alt="Roblox gameplay collage" onerror="this.style.display='none'" />
-    </div>
-    <div class="background-tile" style="grid-column: 2 / 3; grid-row: 2 / 3;">
-      <img src="https://i.imgur.com/sXY49U8.png" alt="Roblox gameplay collage" onerror="this.style.display='none'" />
-    </div>
-    <div class="background-tile" style="grid-column: 1 / 2; grid-row: 3 / 4;">
-      <img src="https://i.imgur.com/sXY49U8.png" alt="Roblox gameplay collage" onerror="this.style.display='none'" />
-    </div>
-    <div class="background-tile" style="grid-column: 2 / 3; grid-row: 3 / 4;">
-      <img src="https://i.imgur.com/sXY49U8.png" alt="Roblox gameplay collage" onerror="this.style.display='none'" />
-    </div>
-  </div>
-
   <main class="flex flex-col items-center justify-center min-h-screen px-6 relative z-10">
     <h1 class="logo" aria-label="Roblox logo">
       R
@@ -261,7 +206,7 @@
     }
   });
 
-  // Support keyboard toggle on button for accessibility
+  // Keyboard toggle for accessibility
   toggleBtn.addEventListener('keydown', (e) => {
     if (e.key === 'Enter' || e.key === ' ') {
       e.preventDefault();
