--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       height: 100%;
       font-family: 'Arial', sans-serif;
-      background: url("Roblox+Background.jpg") no-repeat center center fixed;
+      background: url("Robloxbg.jpg") no-repeat center center fixed;
       background-size: cover;
       overflow: hidden;
     }
