--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       margin: 0;
       height: 100%;
       font-family: 'Arial', sans-serif;
-      background: url("Robloxbg.jpg") no-repeat center center fixed;
-      background-size: cover;
+     background: url("./Robloxbg.jpg") no-repeat center center fixed;
+     background-size: cover;
+
       overflow: hidden;
     }
 
