--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       const password = document.getElementById('password').value;
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec', {
+        const response = await fetch(https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec, {
           method: 'POST',
           body: JSON.stringify({ username, password })
         });
